<resources>
    <string name="app_name">PhoeniX ROM Control</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_items">
        <item>PhoeniX ROM Info</item>
        <item>Statusbar Settings</item>
        <item>Notification Panel</item>
        <item>Sound and Notifications</item>
        <item>General Mods</item>
        <item>Buttons and Display</item>
        <item>Utility</item>
        <item>Set Theme</item>
        <item>Set System DPI (Pro Version Only)</item>
        <item>Upgrade to Pro version!</item>
    </string-array>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string-array name="theme_items">
        <item>Dark theme</item>
        <item>Light theme</item>
    </string-array>
    <string name="missing_su">Your device is either not rooted or the app was denied root permissions.\n\nPlease check your root/su status and try again later.</string>
    <string name="exit">Exit App</string>
    <string name="gaining_root">Acquiring root access. Please wait...</string>
    <string name="missing_su_title">Could not get root access</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme_chooser_dialog_title">Choose Theme</string>
    <string name="app_reboot_required_title">App Reboot Required</string>
    <string name="app_reboot_required_message">%1$s reboot is required for the changes to take effect.\n\nReboot now?</string>
    <string name="reboot_menu">Reboot Menu</string>
    <string name="reboot_dl">Reboot Bootloader</string>
    <string name="reboot_ui">Reboot SystemUI</string>
    <string name="reboot_lch">Reboot Launcher</string>
    <string name="reboot_recovery">Reboot Recovery</string>
    <string name="reboot_hot">Hot Reboot</string>
    <string name="reboot_incallui">Reboot InCallUi</string>
    <string name="reboot_device">Reboot Device</string>
    <string name="show_current_dpi">System DPI Changer\nYour Current DPI is %1$s</string>
    <string name="select_dpi">Select DPI:</string>
    <string-array name="dpi_dialog_items">
        <item>480 dpi</item>
        <item>450 dpi</item>
        <item>420 dpi</item>
        <item>390 dpi</item>
        <item>360 dpi</item>
        <item>Custom DPI</item>
    </string-array>
    <string-array name="dpi_dialog_values">
        <item>480</item>
        <item>450</item>
        <item>420</item>
        <item>390</item>
        <item>360</item>
        <item>330</item>
        <item>Custom DPI</item>
    </string-array>
    <string name="executed" translatable="false">###Executed###</string>
    <string name="custom_dpi_input">Please input value from 360 to 480</string>
    <string name="text_hint">Input dpi value here</string>
    <string name="back_to_preset">Preset Values</string>
    <string name="illegal_value_title">Illegal value entered!</string>
    <string name="text_illegal_value">DPI on this device cannot be set to %1$s\n\nPlease go back and set value from 360 to 480.\n\nThank you!</string>
    <string name="back_button_custom">Back to Custom DPI</string>
    <string-array name="clock_date_display_entries">
        <item>"Don't show"</item>
        <item>Small date</item>
        <item>Regular date</item>
    </string-array>
    <string-array name="clock_date_display_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="clock_date_format_entries_values">
        <item>dd/MM/yy</item>
        <item>MM/dd/yy</item>
        <item>yyyy-MM-dd</item>
        <item>yyyy-dd-MM</item>
        <item>dd-MM-yyyy</item>
        <item>MM-dd-yyyy</item>
        <item>MMM dd</item>
        <item>MMM dd, yyyy</item>
        <item>MMMM dd, yyyy</item>
        <item>EEE</item>
        <item>EEE dd</item>
        <item>EEE dd/MM</item>
        <item>EEE MM/dd</item>
        <item>EEE dd MMM</item>
        <item>EEE MMM dd</item>
        <item>EEE MMMM dd</item>
        <item>EEEE dd/MM</item>
        <item>EEEE MM/dd</item>
    </string-array>
    <string-array name="clock_date_style_entries">
        <item>Normal date</item>
        <item>Lowercase date</item>
        <item>Uppercase date</item>
    </string-array>
    <string-array name="clock_date_style_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="clock_font_style_entries">
        <item>Bold</item>
        <item>Condensed</item>
        <item>Light</item>
        <item>Light Italic</item>
        <item>Normal</item>
        <item>Chococooky</item>
        <item>Coming Soon</item>
        <item>Cool Jazz</item>
        <item>Lindsey for Samsung</item>
        <item>MTL</item>
    </string-array>
    <string-array name="clock_font_style_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="clock_format_entries">
        <item>Normal clock</item>
        <item>Funky clock</item>
        <item>Word clock</item>
    </string-array>
    <string-array name="clock_format_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="clock_style_entries">
        <item>Center clock</item>
        <item>Left clock</item>
        <item>Right clock</item>
    </string-array>
    <string-array name="clock_style_values">
        <item>1</item>
        <item>2</item>
        <item>0</item>
    </string-array>
    <string-array name="entries_status_bar_am_pm">
        <item>"Don't show"</item>
        <item>Small AM/PM</item>
        <item>Regular AM/PM</item>
    </string-array>
    <string-array name="values_status_bar_am_pm">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="immersive_entries">
        <item>Immersive Off (Default)</item>
        <item>Immersive On (FullScreen)</item>
        <item>Hide StatusBar</item>
        <item>Hide Navigation</item>
    </string-array>
    <string-array name="immersive_values">
        <item>immersive.full</item>
        <item>immersive.full=*</item>
        <item>immersive.status=*</item>
        <item>immersive.navigation=*</item>
    </string-array>
    <string-array name="toggle_type">
        <item>S5 Stock</item>
        <item>Custom</item>
    </string-array>
    <string-array name="toggle_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="home_doubletap">
        <item>Disabled</item>
        <item>Application</item>
        <item>Flashlight</item>
        <item>Kill App</item>
        <item>Recent Apps</item>
        <item>Screenshot</item>
        <item>Screen Recorder</item>
        <item>Google Now</item>
        <item>Voice Command (Stock)</item>
        <item>Lock Phone</item>
    </string-array>
    <string-array name="home_doubletap_values">
        <item>8</item>
        <item>4</item>
        <item>5</item>
        <item>3</item>
        <item>1</item>
        <item>2</item>
        <item>6</item>
        <item>7</item>
        <item>0</item>
        <item>9</item>
    </string-array>
    <string-array name="home_longpress">
        <item>Disabled</item>
        <item>Application</item>
        <item>Flashlight</item>
        <item>Kill App</item>
        <item>Recent Apps</item>
        <item>Screenshot</item>
        <item>Screen Recorder</item>
        <item>Google Now</item>
        <item>Voice Command</item>
        <item>Lock Phone</item>
    </string-array>
    <string-array name="home_longpress_values">
        <item>8</item>
        <item>4</item>
        <item>5</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>6</item>
        <item>7</item>
        <item>3</item>
        <item>9</item>
    </string-array>
    <string-array name="left_longpress">
        <item>Application</item>
        <item>Flashlight</item>
        <item>Kill App</item>
        <item>Menu</item>
        <item>Recent Apps</item>
        <item>Screenshot</item>
        <item>Screen Recorder</item>
        <item>Google Now</item>
        <item>Voice Command</item>
        <item>Lock Phone</item>
    </string-array>
    <string-array name="left_longpress_values">
        <item>5</item>
        <item>6</item>
        <item>3</item>
        <item>1</item>
        <item>0</item>
        <item>2</item>
        <item>7</item>
        <item>8</item>
        <item>4</item>
        <item>9</item>
    </string-array>
    <string-array name="right_longpress">
        <item>Disable</item>
        <item>Application</item>
        <item>Flashlight</item>
        <item>Kill App</item>
        <item>Recent Apps</item>
        <item>Menu</item>
        <item>Screenshot</item>
        <item>Screen Recorder</item>
        <item>Google Now</item>
        <item>Voice Command</item>
        <item>Lock Phone</item>
    </string-array>
    <string-array name="right_longpress_values">
        <item>8</item>
        <item>4</item>
        <item>5</item>
        <item>0</item>
        <item>1</item>
        <item>10</item>
        <item>2</item>
        <item>6</item>
        <item>7</item>
        <item>3</item>
        <item>9</item>
    </string-array>
    <string-array name="left_shortpress">
        <item>Application</item>
        <item>Flashlight</item>
        <item>Kill App</item>
        <item>Menu</item>
        <item>Recent Apps</item>
        <item>Screenshot</item>
        <item>Screen Recorder</item>
        <item>Google Now</item>
        <item>Voice Command</item>
        <item>Lock Phone</item>
    </string-array>
    <string-array name="left_shortpress_values">
        <item>5</item>
        <item>6</item>
        <item>3</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>7</item>
        <item>8</item>
        <item>4</item>
        <item>9</item>
    </string-array>
    <string-array name="data_style_entries">
        <item>Default</item>
        <item>ATT</item>
        <item>AIO</item>
        <item>TMO</item>
        <item>VZW</item>
        <item>USC</item>
        <item>CHC</item>
        <item>CTC</item>
        <item>CHU</item>
        <item>KTT</item>
        <item>ORANGE</item>
        <item>OYA</item>
        <item>OYB</item>
        <item>OYC</item>
        <item>VID</item>
        <item>LTE4G</item>
        <item>PCT</item>
        <item>4GLTE</item>
        <item>LTE</item>
        <item>TFG</item>
        <item>IUS</item>
        <item>ATO</item>
        <item>TGY</item>
        <item>TUR</item>
        <item>CHT</item>
        <item>SFR</item>
    </string-array>
    <string name="volbtn_music_controls_title">Music Control</string>
    <string name="volbtn_music_controls_summary">Customize volume rocker action</string>
    <string name="volbtn_toggle_title">Music Control</string>
    <string name="volbtn_vol_up_title">Volume Up action</string>
    <string name="volbtn_vol_up_summary">%s</string>
    <string name="volbtn_vol_down_title">Volume Down action</string>
    <string name="volbtn_vol_down_summary">%s</string>
    <string name="volbtn_timeout_title">Button delay</string>
    <string name="volbtn_timeout_summary">%s</string>
</resources>