<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/android:windowBackground">

        <include
            android:id="@+id/toolbar_actionbar"
            layout="@layout/toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />


        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_actionbar"
            android:clickable="true">

        </RelativeLayout>


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/reboot_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            fab:menu_fab_size="normal"
            fab:menu_showShadow="true"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_colorNormal="?attr/colorAccent"
            fab:menu_colorRipple="?attr/colorPrimary"
            fab:menu_animationDelayPerItem="50"
            fab:menu_icon="@drawable/ic_reboot"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_paddingTop="4dp"
            fab:menu_labels_paddingRight="8dp"
            fab:menu_labels_paddingBottom="4dp"
            fab:menu_labels_paddingLeft="8dp"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_textColor="?attr/FabtextColorPrimary"
            fab:menu_labels_textSize="14sp"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_colorNormal="?attr/FabcolorPrimary"
            fab:menu_labels_colorPressed="?attr/FabcolorPrimaryDark"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_position="left"
            fab:menu_openDirection="up"
            fab:menu_backgroundColor="?attr/FabMenuBcgColorPrimary"
            fab:menu_fab_show_animation="@anim/fab_slide_in_from_right"
            fab:menu_fab_hide_animation="@anim/fab_slide_out_to_right"
            fab:menu_fab_label="@string/reboot_menu"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/toolbar_actionbar">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_reboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:fab_colorNormal="?attr/colorPrimary"
                app:fab_colorRipple="?attr/colorAccent"
                android:src="@drawable/ic_reboot"
                app:fab_size="mini"
                app:fab_shadowRadius="4dp"
                app:fab_shadowXOffset="1dp"
                app:fab_shadowYOffset="3dp"
                fab:fab_label="@string/reboot_device" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_reboot_hotboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:fab_colorNormal="?attr/colorAccent"
                app:fab_colorRipple="?attr/colorPrimary"
                android:src="@drawable/ic_hotboot"
                app:fab_size="mini"
                app:fab_shadowRadius="4dp"
                app:fab_shadowXOffset="1dp"
                app:fab_shadowYOffset="3dp"
                fab:fab_label="@string/reboot_hot"/>


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_reboot_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:fab_colorNormal="?attr/colorPrimary"
                app:fab_colorRipple="?attr/colorAccent"
                android:src="@drawable/ic_reboot_recovery"
                app:fab_size="mini"
                app:fab_shadowRadius="4dp"
                app:fab_shadowXOffset="1dp"
                app:fab_shadowYOffset="3dp"
                fab:fab_label="@string/reboot_recovery"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_reboot_bl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:fab_colorNormal="?attr/colorAccent"
                app:fab_colorRipple="?attr/colorPrimary"
                android:src="@drawable/ic_reboot_bl"
                app:fab_size="mini"
                app:fab_shadowRadius="4dp"
                app:fab_shadowXOffset="1dp"
                app:fab_shadowYOffset="3dp"
                fab:fab_label="@string/reboot_dl" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_reboot_systemUI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:fab_colorNormal="?attr/colorPrimary"
                app:fab_colorRipple="?attr/colorAccent"
                android:src="@drawable/ic_reboot_ui"
                app:fab_size="mini"
                app:fab_shadowRadius="4dp"
                app:fab_shadowXOffset="1dp"
                app:fab_shadowYOffset="3dp"
                fab:fab_label="@string/reboot_ui" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_reboot_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:fab_colorNormal="?attr/colorAccent"
                app:fab_colorRipple="?attr/colorPrimary"
                android:src="@drawable/ic_reboot_lch"
                app:fab_size="mini"
                app:fab_shadowRadius="4dp"
                app:fab_shadowXOffset="1dp"
                app:fab_shadowYOffset="3dp"
                fab:fab_label="@string/reboot_lch" />


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_reboot_incallui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:fab_colorNormal="?attr/colorPrimary"
                app:fab_colorRipple="?attr/colorAccent"
                android:src="@drawable/ic_reboot_incallui"
                app:fab_size="mini"
                app:fab_shadowRadius="4dp"
                app:fab_shadowXOffset="1dp"
                app:fab_shadowYOffset="3dp"
                fab:fab_label="@string/reboot_incallui" />



        </com.github.clans.fab.FloatingActionMenu>


    </RelativeLayout>
    <!-- android:layout_marginTop="?android:attr/actionBarSize"-->
    <com.wubydax.romcontrol.ScrimInsetsFrameLayout
        android:id="@+id/scrimInsetsFrameLayout"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:elevation="10dp"
        android:fitsSystemWindows="true"
        app:insetForeground="#4000">

        <fragment
            android:id="@+id/fragment_drawer"
            android:name="com.wubydax.romcontrol.NavigationDrawerFragment"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout="@layout/fragment_navigation_drawer" />
    </com.wubydax.romcontrol.ScrimInsetsFrameLayout>


</android.support.v4.widget.DrawerLayout>